--- a/Surveyform.html
+++ b/Surveyform.html
@@ -73,7 +73,7 @@
         <input class="inline" id="You-and-Me" type="checkbox" required name="You-and-Me" /><a href="https://drive.google.com/file/d/1y5Bv602pgZ87DCtOVTwv_s215MpQUw8s/view?usp=drivesdk">You and me🥰😍</a>
       </label>
     <div class="top-space">
-                    <input type="submit" id="submit" value="Submit">
+                    <input type="submit" id="submit" formtarget="_blank" value="Submit">
                 </div>
 </body>
 </html>
