--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Love Survey Form</title>
-     <link rel="stylesheet" href="Surveyform.css" />
+     <link rel="stylesheet" href="styles.css" />
   </head>
 <body>
   <h1>LOVE SURVEY FORM</h1>
